# LVGL-AI-Lab

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: arm-none-eabi.toolchain.cmake
docs/: BACKLOG.md  CHANGELOG.md  README.md  state.md  test-cases.md
docs/_meta/sessions/: 20260502-0113-st2-cmake-bringup-post.md  20260502-0113-st2-cmake-bringup-pre.md  20260502-0836-st3-flash-gdb-post.md  20260502-0836-st3-flash-gdb-pre.md  20260502-0841-st4-gdb-attach-post.md  20260502-0841-st4-gdb-attach-pre.md  20260502-0913-sa-lcd-bringup-post.md  20260502-0913-sa-lcd-bringup-pre.md  20260502-0931-sb-lvgl-port-post.md  20260502-0931-sb-lvgl-port-pre.md  20260502-1057-sc-rtc-source-post.md  20260502-1057-sc-rtc-source-pre.md  20260502-1213-sd-watch-face-post.md  20260502-1213-sd-watch-face-pre.md  20260502-1358-sf-card2-retro-post.md  20260502-1358-sf-card2-retro-pre.md  20260502-1700-st1-pre-post-tooling-post.md  20260502-1700-st1-pre-post-tooling-pre.md  20260502-1923-sg-sdio-bringup-post.md  20260502-1923-sg-sdio-bringup-pre.md  20260502-1935-sh-fatfs-port-post.md  20260502-1935-sh-fatfs-port-pre.md  20260502-2017-si-lvgl-fs-drv-post.md  20260502-2017-si-lvgl-fs-drv-pre.md  20260502-2056-sj-lv-font-conv-pipeline-post.md  20260502-2056-sj-lv-font-conv-pipeline-pre.md  20260502-2144-sk-cool-multi-theme-desktop-post.md  20260502-2144-sk-cool-multi-theme-desktop-pre.md  20260503-2002-m1-pc-simulator-post.md  20260503-2002-m1-pc-simulator-pre.md  20260503-2134-m2-hard-soft-split-post.md  20260503-2134-m2-hard-soft-split-pre.md  20260503-2142-m3-soft-style-from-sd-post.md  20260503-2142-m3-soft-style-from-sd-pre.md  20260504-0003-m4-golden-image-auto-verify-post.md  20260504-0003-m4-golden-image-auto-verify-pre.md
docs/capability-report/: v0.1.md  v0.3.md
docs/designs/: 2026-05-01-AI嵌入式GUI方法论-design.md  2026-05-02-watchface-spec-v1.md
docs/lessons/: 2026-05-02-kit-keil-s-gcc-s-启动汇编翻译-recipe.md  2026-05-02-lvgl-lv_conf-配置项隐式依赖链.md  2026-05-02-lvgl-v9-transform_scale-partial-buffer-m.md  2026-05-02-lvgl-v9-在-256k-flash-上的最小可用配置.md  2026-05-02-pyocd-用-stm32f103rc-target-驱动-gd32f303.md  INDEX.md
docs/plans/: 2026-05-01-card1-minimal-debuggable.md  2026-05-01-card2-lvgl-watch-face.md  2026-05-01-first-weekly-retro.md  2026-05-01-flash-record-flow.md  2026-05-01-led-bringup.md  2026-05-01-lvgl-port-partial-buffer.md  2026-05-01-pre-post-automation.md  2026-05-01-rtc-source.md  2026-05-01-screen-driver.md  2026-05-01-spi-screen-selection.md  2026-05-01-time-widget.md  2026-05-01-watch-face-layout.md  2026-05-02-card3-sd-fatfs-gui-resources.md  2026-05-04-v0.4-roadmap-candidates.md
docs/qa-reports/: 2026-05-02-card2-watchface.md
docs/references/: INDEX.md  board.md  mcu.md  screens.md  sdk.md
linker/: gd32f303rc.ld
src/: desktop_logic.c  desktop_logic.h  gd32f30x_it.c  hw.h  hw_host.c  hw_mcu.c  main.c  main.h  snapshot_util.c  snapshot_util.h
src/bsp/: gpio.c  gpio.h  rtc.c  rtc.h  spi.c  spi.h
src/devices/lcd/: tftlcd.c  tftlcd.h
src/devices/sd/: montserrat_28_blob.c  sd_diskio.c  sd_diskio.h  sdcard.c
src/lvgl_port/: lv_conf.h  lv_port_disp.c  lv_port_disp.h
src/themes/: font_pool.c  style_loader.c  style_loader.h  theme_neon.c  theme_pixel.c  theme_style.c  theme_style.h  theme_terminal.c  theme_zen.c  themes.h
startup/: startup_gd32f303rc.S
tests/: smoke-test.js
tools/: auto-verify.sh  auto_verify.py  flash.sh  font_regen.md  gdb-init.txt  gdb-server.sh  session.sh
tools/golden/: NEON.ppm  PIXEL.ppm  TERMINAL.ppm  ZEN.ppm
tools/styles/: pixel.tstyle  terminal.tstyle  zen.tstyle
